--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ __pycache__/
 # Temporary Data & Scripts
 *.py
 data/*.csv
+data/*.json
+!data/context_events.json
 scripts/logs/
 frontend/public/data/*.csv
 !frontend/public/data/social_network_data.json
